Can now input coords and generate a grid

--- a/rover2/views/index.erb
+++ b/rover2/views/index.erb
@@ -6,7 +6,7 @@
 
 
 <% content_for :main_content do %>
-     <form action="/" method="post">
+     <form action="/grid" method="post">
         X: <input type="text" name="x"> 
         Y: <input type="text" name="y">
            <input id="button" type="submit" name="Submit" value="ENTER">
