--- a/rover2/views/layout.erb
+++ b/rover2/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="grid.css">
+        <link rel="stylesheet" type="text/css" href="../../grid.css">
     </head>
     <body>
         <div class="container">
@@ -14,7 +14,7 @@
             </div>
             <div class="mainbox"> 
                     
-                    <%= yield_content :main_content %>        
+                <%= yield_content :main_content %>        
                     
             </div>    
         </div>
